[package]
name = "imagepal"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
console = "0.16.3"
image = "0.25.10"
indicatif = "0.18.4"
itertools = "0.15.0"
rand = "0.10.1"
rayon = "1.12.0"
unicode-ellipsis = "0.4.0"
wild = "2.2.1"
